--- a/res/layout/slim_ota.xml
+++ b/res/layout/slim_ota.xml
@@ -22,157 +22,18 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity" >
+    tools:context=".MainActivity"
+    android:weightSum="1">
 
-    <LinearLayout
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1.03"
-        android:orientation="vertical" >
-
-        <RelativeLayout
-            android:id="@+id/deviceTitleLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="22dp" >
-
-            <TextView
-                android:id="@+id/deviceTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dip"
-                android:text="@string/device_title"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
-
-            <TextView
-                android:id="@+id/deviceName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/deviceTitle"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
-
-            <TextView
-                android:id="@+id/deviceCodename"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/deviceName"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
-
-            <TextView
-                android:id="@+id/curVerTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/deviceCodename"
-                android:layout_marginTop="8dip"
-                android:text="@string/curVer"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
-
-            <TextView
-                android:id="@+id/curVer"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/curVerTitle"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
-
-            <TextView
-                android:id="@+id/curFile"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/curVer"
-                android:ellipsize="end"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
-
-            <TextView
-                android:id="@+id/upToDateTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/curFile"
-                android:layout_marginTop="8dip"
-                android:text="@string/update_file_title"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
-
-            <TextView
-                android:id="@+id/upToDate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/curFile"
-                android:layout_marginTop="8dip"
-                android:layout_toRightOf="@id/upToDateTitle"
-                android:ellipsize="end"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
-
-            <ImageView
-                android:id="@+id/updateIcon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="18dp"
-                android:src="@drawable/ic_uptodate" />
-        </RelativeLayout>
-
-        <TextView
-            android:id="@+id/line"
-            style="?android:attr/listSeparatorTextViewStyle"
-            android:layout_width="match_parent"
-            android:layout_height="16dp"
-            android:gravity="center_horizontal" />
-
-        <TextView
-            android:id="@+id/line2"
-            style="?android:attr/listSeparatorTextViewStyle"
-            android:layout_width="match_parent"
-            android:layout_height="3dp"
-            android:gravity="center_horizontal" />
-
-        <RelativeLayout
-            android:id="@+id/linksFragment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="19.74" >
-        </RelativeLayout>
-
-        <GridLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-        </GridLayout>
-
-        <TextView
-            android:id="@+id/line3"
-            style="?android:attr/listSeparatorTextViewStyle"
-            android:layout_width="match_parent"
-            android:layout_height="16dp"
-            android:gravity="center_horizontal" />
-
-    </LinearLayout>
-
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:padding="5dp" >
-
-        <ImageView
-            android:id="@+id/btn_setting"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/action_settings"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:padding="6dp"
-            android:clickable="true"
-            android:background="?android:attr/selectableItemBackground" />
-
-        <ImageView
-            android:id="@+id/btn_update"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/navigation_refresh"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"
-            android:padding="6dp"
-            android:clickable="true"
-            android:background="?android:attr/selectableItemBackground" />
-
-    </RelativeLayout>
-
+        android:layout_height="match_parent"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Touch here to enter in OTA Updater for SlimKatXperia"
+        android:id="@+id/textView"
+        android:targetPackage="com.xperiaste.otaupdater"
+        android:targetClass="com.xperiaste.otaupdater.OTAUpdaterActivity"
+        android:gravity="center"
+        android:clickable="true"
+        android:layout_margin="10dp" />
 </LinearLayout>
