--- a/res/layout/slim_ota.xml
+++ b/res/layout/slim_ota.xml
@@ -22,18 +22,95 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity"
-    android:weightSum="1">
+    tools:context=".MainActivity" >
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Touch here to enter in OTA Updater for SlimKatXperia"
-        android:id="@+id/textView"
-        android:targetPackage="com.xperiaste.otaupdater"
-        android:targetClass="com.xperiaste.otaupdater.OTAUpdaterActivity"
-        android:gravity="center"
-        android:clickable="true"
-        android:layout_margin="10dp" />
+        android:layout_height="wrap_content"
+        android:layout_weight="1.03"
+        android:orientation="vertical" >
+
+        <RelativeLayout
+            android:id="@+id/deviceTitleLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="22dp" >
+
+            <TextView
+                android:id="@+id/otaupdater"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dip"
+                android:text="@string/otaupdate"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:targetPackage="com.xperiaste.otaupdater"
+                android:targetClass="com.xperiaste.otaupdater.OTAUpdaterActivity"
+                android:clickable="true" />
+
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/line"
+            style="?android:attr/listSeparatorTextViewStyle"
+            android:layout_width="match_parent"
+            android:layout_height="16dp"
+            android:gravity="center_horizontal" />
+
+        <TextView
+            android:id="@+id/line2"
+            style="?android:attr/listSeparatorTextViewStyle"
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:gravity="center_horizontal" />
+
+        <RelativeLayout
+            android:id="@+id/linksFragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="19.74" >
+        </RelativeLayout>
+
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+        </GridLayout>
+
+        <TextView
+            android:id="@+id/line3"
+            style="?android:attr/listSeparatorTextViewStyle"
+            android:layout_width="match_parent"
+            android:layout_height="16dp"
+            android:gravity="center_horizontal" />
+
+    </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:padding="5dp" >
+
+        <ImageView
+            android:id="@+id/btn_setting"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/action_settings"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:padding="6dp"
+            android:clickable="true"
+            android:background="?android:attr/selectableItemBackground" />
+
+        <ImageView
+            android:id="@+id/btn_update"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/navigation_refresh"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:padding="6dp"
+            android:clickable="true"
+            android:background="?android:attr/selectableItemBackground" />
+
+    </RelativeLayout>
+
 </LinearLayout>
