--- a/res/layout/slim_ota.xml
+++ b/res/layout/slim_ota.xml
@@ -24,51 +24,29 @@
     android:orientation="vertical"
     tools:context=".MainActivity" >
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1.03"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:background="?android:attr/selectableItemBackground"
+        android:clickable="false" >
 
-        <RelativeLayout
-            android:id="@+id/deviceTitleLayout"
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="22dp" >
+            android:paddingTop="4dp"
+            android:paddingLeft="5dp"
+            android:text="@string/otaupdate"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+    </LinearLayout>    
 
-            <TextView
-                android:id="@+id/otaupdater"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dip"
-                android:text="@string/otaupdate"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:targetPackage="com.xperiaste.otaupdater"
-                android:targetClass="com.xperiaste.otaupdater.OTAUpdaterActivity"
-                android:clickable="true" />
-
-        </RelativeLayout>
-
-        <TextView
-            android:id="@+id/line"
-            style="?android:attr/listSeparatorTextViewStyle"
-            android:layout_width="match_parent"
-            android:layout_height="16dp"
-            android:gravity="center_horizontal" />
-
-        <TextView
-            android:id="@+id/line2"
-            style="?android:attr/listSeparatorTextViewStyle"
-            android:layout_width="match_parent"
-            android:layout_height="3dp"
-            android:gravity="center_horizontal" />
-
-        <RelativeLayout
-            android:id="@+id/linksFragment"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="19.74" >
-        </RelativeLayout>
+            android:orientation="horizontal" >
+        </LinearLayout>
 
         <GridLayout
             android:layout_width="match_parent"
@@ -81,36 +59,5 @@
             android:layout_width="match_parent"
             android:layout_height="16dp"
             android:gravity="center_horizontal" />
-
-    </LinearLayout>
-
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:padding="5dp" >
-
-        <ImageView
-            android:id="@+id/btn_setting"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/action_settings"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:padding="6dp"
-            android:clickable="true"
-            android:background="?android:attr/selectableItemBackground" />
-
-        <ImageView
-            android:id="@+id/btn_update"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/navigation_refresh"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentTop="true"
-            android:padding="6dp"
-            android:clickable="true"
-            android:background="?android:attr/selectableItemBackground" />
-
-    </RelativeLayout>
 
 </LinearLayout>
